# enviropluspublisher

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .yamllint  Dockerfile  asyncapi-min.yaml  asyncapi.yaml  build-asyncapi.sh  docker-build.sh  docker-run.sh  start.sh  supervisord.conf
fastapistaticserver/: pyproject.toml  run-server.sh
fastapistaticserver/app/: main.py  prestart.sh
fastapistaticserver/app/static/: index.html
fastapistaticserver/app/static/js/: highlight.min.js
