[tool.poetry]
name = "fastapistaticserver"
version = "0.1.0"
description = ""
authors = ["Philip Cutler <greenthegarden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
gunicorn = "^20.0.4"
aiofiles = "^0.6.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
